# cuckoo

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md
.claude/: settings.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  dependabot-auto-merge.yml
benches/: store.rs
examples/: load_harness.rs
k8s/: 00-namespace.yaml  10-deployment.yaml  20-service.yaml
src/: clock.rs  core.rs  example.http  infra.rs  lib.rs  main.rs  server.rs  store.rs  timer.rs  wheel.rs
src/core/: clock.rs  event_handler.rs  mod.rs  store.rs  timer.rs  timer_service.rs  wheel.rs
src/core/store/: tests.rs
src/core/wheel/: tests.rs
src/infra/: app.rs  event_receiver.rs  events.rs  handlers.rs  main_program.rs  mod.rs  platform_specific_model.rs  timer_app.rs
src/infra/handlers/: tests.rs
src/infra/main_program/: tests.rs
src/utils/: app.rs  event_handler.rs  event_source.rs  http.rs  lifecycle.rs  logger.rs  mod.rs
src/utils/http/: client.rs  example.http  mod.rs  router.rs  server.rs  utils.rs
src/utils/logger/: tests.rs
tests/: timer_integration.rs
tests/common/: mod.rs
