[package]
name = "cuckoo"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
chrono = "0.4.42"
ctrlc = "3.5.1"
futures = "0.3.31"
parking_lot = "0.12.5"
test-case = "3.3.1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.19.0", features = ["v4"] }
hyper = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
tokio-stream = "0.1.17"
serde = { version = "1.0.228", features = ["derive"] }
bytes = "1.11.0"
http = "1.4.0"
serde_json = "1.0.149"
